# nestforge-web

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  wiki-sync.yml
crates/nestforge-web/: Cargo.toml
crates/nestforge-web-cli/: Cargo.toml
crates/nestforge-web-cli/src/: main.rs
crates/nestforge-web-core/: Cargo.toml
crates/nestforge-web-core/src/: api.rs  config.rs  hmr.rs  lib.rs  openapi.rs  routing.rs
crates/nestforge-web-core/src/api/: generator.rs  mod.rs  types.rs
crates/nestforge-web-core/src/hmr/: mod.rs  reload.rs  watcher.rs
crates/nestforge-web-core/src/openapi/: generator.rs  mod.rs  spec.rs  ui.rs
crates/nestforge-web-core/src/routing/: route.rs  scanner.rs
crates/nestforge-web-core/src/server/: app.rs  mod.rs  renderer.rs
crates/nestforge-web-core/src/server/app/: router.rs
crates/nestforge-web-core/src/server/renderer/: page.rs  renderer.rs
crates/nestforge-web-core/tests/: api_test.rs  config_test.rs  hmr_test.rs  openapi_test.rs  routing_test.rs
crates/nestforge-web/src/: lib.rs
crates/nfw-core/: Cargo.toml
crates/nfw-core/src/: lib.rs
crates/nfw-core/src/api/: client.rs
crates/nfw-core/src/hmr/: watcher.rs
crates/nfw-core/src/openapi/: spec.rs
crates/nfw-core/src/routing/: mod.rs
crates/nfw-core/src/server/: mod.rs  renderer.rs
crates/nfw-core/src/server/app/: router.rs
crates/nfw-core/tests/: api_test.rs  config_test.rs  hmr_test.rs  openapi_test.rs  routing_test.rs
docs/: Home.md  README.md  _Footer.md  _Sidebar.md  api-routes.md  backend-integration.md  cli.md  configuration.md  deployment.md  project-structure.md  quick-start.md  routing.md
