[package]
name = "nestforge-web-cli"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
rust-version.workspace = true

[[bin]]
name = "nestforge-web"
path = "src/main.rs"

[dependencies]
nfw-core = "0.1.1"
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy = "0.15"
git2 = "0.19"
