[package]
name = "nestforge-web"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
nfw-core = { path = "../nfw-core" }

[features]
default = []
