[package]
name = "nfw-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
regex = "1.10"
once_cell = "1.19"
notify = "6.1"
uuid = { version = "1.7", features = ["v4"] }
futures-util = "0.3"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.10"
